# global-public-holidays

./: Dockerfile  Pipfile  README.md  app.py  devbox.json  flake.nix  main.py  pyproject.toml
.github/workflows/: publish.yml
src/: app.py  countries.json
src/dataprep/: prepare.py
src/draw/: present.py
