[tool.poetry]
name = "global-public-holidays"
version = "0.1.0"
description = "Displays public holidays from around the world along with detailed information about each holiday"
authors = ["Andrei Mahalean <andrei@maha.nz>"]
license = "GPL-2.0"
readme = "README.md"

packages = [
  { include = "main.py" }
]

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.18.0"
pandas = "^2.1.4"
packaging = "^23.2"
geopy = "^2.4.1"
openai = "^1.3.8"
dash = "^2.14.2"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
